# WeNeedToCook-mobile

./: AddNewProductScreen.qml  AddNewRecipeScreen.qml  AddNewToShoppingList.qml  CMakeLists.txt  DebugModeHandle.cpp  DebugModeHandle.h  EditProductScreen.qml  EditRecipeScreen.qml  EditShoppingListScreen.qml  FileIO.cpp  FileIO.h  FridgeScreen.qml  InfoScreen.qml  ItemsInFridgeData.cpp  ItemsInFridgeData.h  Main.qml  MainScreen.qml  NotEnoughItems.qml  README.md  RecipeBookData.h  RecipeScreen.qml  RecpieBookData.cpp  SettingsScreen.qml  ShoppingList.h  ShoppingListData.cpp  ShoppingListScreen.qml  TeamScreen.qml  UserVariables.cpp  UserVariables.h  main.cpp
